--- a/scss/modules/_spacing.scss
+++ b/scss/modules/_spacing.scss
@@ -1,16 +1,13 @@
-// Spacing
-//––––––––––––––––––––––––––––––––––––––––––––––––––
-
 button,
 .button {
-  margin-bottom: 1rem;
+ margin-bottom: $margin-bottom-s;
 }
 
 input,
 textarea,
 select,
 fieldset {
-  margin-bottom: 1.5rem;
+margin-bottom: $margin-bottom-m;
 }
 
 pre,
@@ -22,5 +19,5 @@ p,
 ul,
 ol,
 form {
-  margin-bottom: 2.5rem;
+margin-bottom: $margin-bottom-s;
 }
